# stabby

./: Cargo.toml  README.md
examples/: gencode.rs
src/: dense.rs  lib.rs  listy.rs  sparse.rs
