[package]
name = "stabby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ransel = "0.2.1"

[dev-dependencies]
flate2 = { version = "1.0.17" }
noodles = { version = "0.52.0", features = ["core", "gtf"] }
random = { version = "0.14.0" }
